[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/GraphEdit.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/PlayerDialog.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=3]
[ext_resource path="res://Resources/theme.tres" type="Theme" id=4]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 3 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.121569, 0.121569, 0.113725, 1 )

[node name="Graph" parent="." instance=ExtResource( 1 )]
margin_top = 28.0
rect_min_size = Vector2( 100, 100 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchor_right = 1.0
margin_bottom = 24.0

[node name="FileMenuButton" type="MenuButton" parent="CanvasLayer/HBoxContainer"]
margin_right = 35.0
margin_bottom = 24.0
text = "File"
align = 0

[node name="EditMenuButton" type="MenuButton" parent="CanvasLayer/HBoxContainer"]
margin_left = 39.0
margin_right = 75.0
margin_bottom = 24.0
text = "Edit"
align = 0

[node name="SelecMenuButton" type="MenuButton" parent="CanvasLayer/HBoxContainer"]
margin_left = 79.0
margin_right = 130.0
margin_bottom = 24.0
focus_mode = 2
text = "Select"
align = 0

[node name="HelpMenuButton" type="MenuButton" parent="CanvasLayer/HBoxContainer"]
margin_left = 134.0
margin_right = 176.0
margin_bottom = 24.0
text = "Help"
align = 0

[node name="HelpDialog" type="AcceptDialog" parent="CanvasLayer"]
visible = true
margin_left = -592.0
margin_top = 379.0
margin_right = -41.0
margin_bottom = 801.0
popup_exclusive = true
window_title = "Help"

[node name="Label2" type="RichTextLabel" parent="CanvasLayer/HelpDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -36.0
bbcode_enabled = true
bbcode_text = "[center][color=white]QUICK GUIDE[/color][/center]

[center][color=aqua]Moving and zooming in/out[/color][/center]
  [color=silver]Use your [color=white]middle mouse button[/color] to scroll the board. Use your [color=white]scrollwheel[/color] to zoom in/out.[/color]

[center][color=aqua]Importing images[/color][/center]
  [color=silver]Drag image files from your file explorer and drop them on the board. The images will automatically be sorted and connected in alphabetical order.[/color]

[center][color=aqua]Adding a new frame[/color][/center]
  [color=silver]Click on the [color=white]+[/color] button, or double-click on empty space. Or drag from the input or output pin of a frame and release on empty space.[/color]

[center][color=aqua]Selecting frames[/color][/center]
  [color=silver]Click on a frame to select it. Drag a marquee around several frames to select them.
  [color=white]Ctrl + click[/color] frames to add them to or subtract them from the selection.
  [color=white]Shift + click[/color] a frame to add all connected frames between this frame and the selected frames to the selection.
  To select all frames upstream to the selected frame, open the [color=white]Select[/color] menu and click on [color=white]Select Before[/color]. To select its downstream frames, click on [color=white]Select After[/color]. [color=white]Select Connected[/color] selects both. [color=white]Select Graph[/color] selects all nodes belonging to the same connection network.[/color]

[center][color=aqua]Connecting two frames[/color][/center]
  [color=silver]Drag from the ouput pin of a frame to the input pin of another frame to connect them.[/color]

[center][color=aqua]Disconnecting frames[/color][/center]
  [color=silver]Drag from the input pin of a frame (i.e. the connection's right end) to disconnect it from the previous frame. To disconnect several frames at once, select them, open the [color=white]Edit[/color] menu and click on [color=white]Disconnect[/color].[/color]

[center][color=aqua]Playing a sequence[/color][/center]
  [color=silver]Double-click on a frame to play the sequence from that frame. Or click on the [color=white]movie slate[/color] button in the tool bar.
Tip: From the player window, you can adjust each frame's duration, subtitles, sound, reload its image, etc.[/color]

[center][color=aqua]Exporting a sequence to video[/color][/center]
  [color=silver]Select the first frame of the sequence, then open the [color=white]File[/color] menu and click on [color=white]Export to Video[/color].[/color]
[color=silver]Important: All images must have the same size to be exported as a video.[/color]
[color=lime]Tip: If this option is not available, you will have to install [color=white]FFMpeg[/color] as described in the [color=white]Help[/color] menu.[/color]

[center][color=aqua]Changing background colors[/color][/center]
  [color=silver]You can customize the window background color, or all frames background color, by clicking on their respective colorpicker button in the tool bar.[/color]

[center][color=aqua]Resizing frames[/color][/center]
  [color=silver]Resize a frame by dragging its lower-right corner.
Tip: To change the size of multiple frames, resize one frame, select it, open the [color=white]Edit[/color] menu, choose [color=white]Store Size[/color], then select a group of frames, open the [color=white]Edit[/color] menu again and choose [color=white]Apply Stored Size[/color].[/color]

[center][color=aqua]Aligning/distributing frames[/color][/center]
  [color=silver]Select a bunch of frames, open the [color=white]Edit[/color] menu and click on [color=white]Align Horizontally[/color] or [color=white]Align Vertically[/color] to align them.
  If you're picky on alignment, click on the [color=white]grid with magnet[/color] button in the tool bar to display a grid, which can be configured via the spinbox on its right. Frames and comments will automatically snap to the grid.
  To evenly distribute all frames downstream of the selected frame, open the [color=white]Edit[/color] menu and click on [color=white]Distribute Horizontally[/color], or [color=white]Distribute Vertically[/color], or any of the distribution options.
Tip: Remember to set the number of columns in the distribute grid before clicking on [color=white]Distribute Grid[/color]![/color]

[center][color=aqua]Adding a comment box[/color][/center]
  [color=silver]Click on the [color=white]#[/color] button in the tool bar to add a comment box. Resize the comment box by dragging its bottom-right corner. Click on empy space inside the comment box and type some text. You've made yourself a comment box.[/color]

[center][color=aqua]Customizing a comment box[/color][/center]
  [color=silver]Change the color of a comment box by clicking on its colorpicker button. Add up to 6 icons to the comment box by clicking on its top-left [color=white]light bulb[/color] button. Remove them one by one by clicking on the top-left [color=white]trash can[/color] button of the comment box.

[center][color=aqua]Hosting frames in a comment box[/color][/center]
  [color=silver]Comment boxes can host (or \"parent\") frames. Select a bunch of frames, then click on the [color=white]+[/color] button at the top right of the comment box. Even better, select frames before you click on the [color=white]#[/color] button to let the new comment box host them right off the bat.
  To unhost (or \"unparent\") hosted frames, select them, then click on the [color=white]trash can[/color] button at the top-righ of the comment box.
  Moving a comment box moves its hosted frames. A comment box automatically deforms to fit the frames that host it, even when you move or resize them. As a result, comment boxes hosting frames cannot be resized manually, they automatically conform to their content. And only 3 lines of text are displayed, use the scrollbar to read the rest.[/color]

[center][color=red]KNOWN BUG[/color][/center]
  [color=silver]Sometimes, frames inside a comment box won't let you connect or disconnect them. Just [color=white]zoom out a bit[/color] and you will be able to drag connections normally.[/color]"
text = "QUICK GUIDE

Moving and zooming in/out
  Use your middle mouse button to scroll the board. Use your scrollwheel to zoom in/out.

Importing images
  Drag image files from your file explorer and drop them on the board. The images will automatically be sorted and connected in alphabetical order.

Adding a new frame
  Click on the + button, or double-click on empty space. Or drag from the input or output pin of a frame and release on empty space.

Selecting frames
  Click on a frame to select it. Drag a marquee around several frames to select them.
  Ctrl + click frames to add them to or subtract them from the selection.
  Shift + click a frame to add all connected frames between this frame and the selected frames to the selection.
  To select all frames upstream to the selected frame, open the Select menu and click on Select Before. To select its downstream frames, click on Select After. Select Connected selects both. Select Graph selects all nodes belonging to the same connection network.

Connecting two frames
  Drag from the ouput pin of a frame to the input pin of another frame to connect them.

Disconnecting frames
  Drag from the input pin of a frame (i.e. the connection's right end) to disconnect it from the previous frame. To disconnect several frames at once, select them, open the Edit menu and click on Disconnect.

Playing a sequence
  Double-click on a frame to play the sequence from that frame. Or click on the movie slate button in the tool bar.
Tip: From the player window, you can adjust each frame's duration, subtitles, sound, reload its image, etc.

Exporting a sequence to video
  Select the first frame of the sequence, then open the File menu and click on Export to Video.
Important: All images must have the same size to be exported as a video.
Tip: If this option is not available, you will have to install FFMpeg as described in the Help menu.

Changing background colors
  You can customize the window background color, or all frames background color, by clicking on their respective colorpicker button in the tool bar.

Resizing frames
  Resize a frame by dragging its lower-right corner.
Tip: To change the size of multiple frames, resize one frame, select it, open the Edit menu, choose Store Size, then select a group of frames, open the Edit menu again and choose Apply Stored Size.

Aligning/distributing frames
  Select a bunch of frames, open the Edit menu and click on Align Horizontally or Align Vertically to align them.
  If you're picky on alignment, click on the grid with magnet button in the tool bar to display a grid, which can be configured via the spinbox on its right. Frames and comments will automatically snap to the grid.
  To evenly distribute all frames downstream of the selected frame, open the Edit menu and click on Distribute Horizontally, or Distribute Vertically, or any of the distribution options.
Tip: Remember to set the number of columns in the distribute grid before clicking on Distribute Grid!

Adding a comment box
  Click on the # button in the tool bar to add a comment box. Resize the comment box by dragging its bottom-right corner. Click on empy space inside the comment box and type some text. You've made yourself a comment box.

Customizing a comment box
  Change the color of a comment box by clicking on its colorpicker button. Add up to 6 icons to the comment box by clicking on its top-left light bulb button. Remove them one by one by clicking on the top-left trash can button of the comment box.

Hosting frames in a comment box
  Comment boxes can host (or \"parent\") frames. Select a bunch of frames, then click on the + button at the top right of the comment box. Even better, select frames before you click on the # button to let the new comment box host them right off the bat.
  To unhost (or \"unparent\") hosted frames, select them, then click on the trash can button at the top-righ of the comment box.
  Moving a comment box moves its hosted frames. A comment box automatically deforms to fit the frames that host it, even when you move or resize them. As a result, comment boxes hosting frames cannot be resized manually, they automatically conform to their content. And only 3 lines of text are displayed, use the scrollbar to read the rest.

KNOWN BUG
  Sometimes, frames inside a comment box won't let you connect or disconnect them. Just zoom out a bit and you will be able to drag connections normally."

[node name="FFMpegDialog" type="AcceptDialog" parent="CanvasLayer"]
visible = true
margin_left = -592.0
margin_top = 890.0
margin_right = -41.0
margin_bottom = 1312.0
popup_exclusive = true
window_title = "How to install FFMpeg"

[node name="Label2" type="RichTextLabel" parent="CanvasLayer/FFMpegDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -36.0
bbcode_enabled = true
bbcode_text = "
If you want to be able to export image sequences as MP4 videos, you will need FFMpeg. This free software has to be downloaded and installed separately due to licensing issues.

[color=lime]1. Download FFMpeg.[/color]
[color=silver]For Windows users, that would mean:
    1. Go to the official website [color=white][url]https://ffmpeg.org[/url][/color].
    2. Click on the big green \"Download\" button.
    3. Move your mouse cursor over the Windows logo, then click on [color=white]\"Windows builds from gyan.dev\"[/color] just below.
    4. Scroll down to the \"release builds\" section, right-click on [color=white]\"ffmpeg-release-essentials.7z\"[/color] and choose \"Save target As\" to download it.[/color]

[color=lime]2. Install the one file you really need.[/color]
    [color=silver]1. Unzip the downloaded file.
    2. Copy the file [color=white]ffmpeg.exe[/color] from the [color=white]bin[/color] folder to your project folder (i.e. where you unzipped StoryboardMapper). And that's it.
    3. You can now safely delete the downloaded zip file and its unzipped folder. All you needed was that one single file.[/color]


[center]Congratulations! You can now export a sequence of frames to a video file.[/center]"
text = "
If you want to be able to export image sequences as MP4 videos, you will need FFMpeg. This free software has to be downloaded and installed separately due to licensing issues.

1. Download FFMpeg.
For Windows users, that would mean:
    1. Go to the official website https://ffmpeg.org.
    2. Click on the big green \"Download\" button.
    3. Move your mouse cursor over the Windows logo, then click on \"Windows builds from gyan.dev\" just below.
    4. Scroll down to the \"release builds\" section, right-click on \"ffmpeg-release-essentials.7z\" and choose \"Save target As\" to download it.

2. Install the one file you really need.
    1. Unzip the downloaded file.
    2. Copy the file ffmpeg.exe from the bin folder to your project folder (i.e. where you unzipped StoryboardMapper). And that's it.
    3. You can now safely delete the downloaded zip file and its unzipped folder. All you needed was that one single file.


Congratulations! You can now export a sequence of frames to a video file."

[node name="AboutDialog" type="AcceptDialog" parent="CanvasLayer"]
visible = true
margin_left = -593.0
margin_top = -82.0
margin_right = -44.0
margin_bottom = 294.0
popup_exclusive = true
window_title = "About"

[node name="Label2" type="RichTextLabel" parent="CanvasLayer/AboutDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -36.0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
bbcode_text = "[center][shake rate=10 level=7][color=white]STORYBOARD MAPPER v0.2.6[/color][/shake]

Copyright (c) 2022 Jean-Yves Chasle[/center]

Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the \"Software\"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE."
text = "STORYBOARD MAPPER v0.2.6

Copyright (c) 2022 Jean-Yves Chasle

Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the \"Software\"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE."

[node name="OpenFileDialog" type="FileDialog" parent="CanvasLayer"]
margin_left = -696.0
margin_top = 8.0
margin_right = -112.0
margin_bottom = 470.0
popup_exclusive = true
window_title = "Ouvrir un fichier"
mode = 0
access = 2
filters = PoolStringArray( "*.sbm", "*.res" )

[node name="SaveFileDialog" type="FileDialog" parent="CanvasLayer"]
margin_left = -664.0
margin_top = -24.0
margin_right = -80.0
margin_bottom = 438.0
popup_exclusive = true
window_title = "Save File"
access = 2
filters = PoolStringArray( "*.sbm" )

[node name="ExportVideoFileDialog" type="FileDialog" parent="CanvasLayer"]
margin_left = -664.0
margin_top = -24.0
margin_right = -80.0
margin_bottom = 438.0
popup_exclusive = true
window_title = "Enregistrer un fichier"
access = 2
filters = PoolStringArray( "*.mp4" )

[node name="PlayerDialog" parent="CanvasLayer" instance=ExtResource( 2 )]

[connection signal="play_sequence" from="Graph" to="." method="_on_Graph_play_sequence"]
[connection signal="refresh_sequence" from="Graph" to="." method="_on_Graph_refresh_sequence"]
[connection signal="about_to_show" from="CanvasLayer/HBoxContainer/FileMenuButton" to="." method="_on_FileMenuButton_about_to_show"]
[connection signal="about_to_show" from="CanvasLayer/HBoxContainer/EditMenuButton" to="." method="_on_EditMenuButton_about_to_show"]
[connection signal="about_to_show" from="CanvasLayer/HBoxContainer/SelecMenuButton" to="." method="_on_SelecMenuButton_about_to_show"]
[connection signal="popup_hide" from="CanvasLayer/HelpDialog" to="." method="_on_HelpDialog_popup_hide"]
[connection signal="popup_hide" from="CanvasLayer/FFMpegDialog" to="." method="_on_FFMpegDialog_popup_hide"]
[connection signal="meta_clicked" from="CanvasLayer/FFMpegDialog/Label2" to="." method="_on_Label2_meta_clicked"]
[connection signal="popup_hide" from="CanvasLayer/AboutDialog" to="." method="_on_AboutDialog_popup_hide"]
[connection signal="file_selected" from="CanvasLayer/OpenFileDialog" to="." method="_on_OpenFileDialog_file_selected"]
[connection signal="file_selected" from="CanvasLayer/SaveFileDialog" to="." method="_on_SaveFileDialog_file_selected"]
[connection signal="file_selected" from="CanvasLayer/ExportVideoFileDialog" to="." method="_on_ExportVideoFileDialog_file_selected"]
[connection signal="popup_hide" from="CanvasLayer/ExportVideoFileDialog" to="." method="_on_ExportVideoFileDialog_popup_hide"]
